# fastapi-react-todo

./: README.md
backend/: .env  .gitignore  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  main.py
backend/api/routes/: todos.py  user.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  login.py  todos.py  user.py  users.py
backend/app/core/: config.py  database.py  secrurity.py  security.py
backend/app/tests/: conftest.py
backend/app/tests/api/: test_auth.py  test_root.py  test_todos.py  test_users.py
backend/app/tests/crud/: test_todos.py  test_users.py
backend/app/tests/utils/: todo.py  user.py  utils.py
backend/core/: __init__.py
