[project]
name = "backend"
version = "0.1.0"
description = "Todo FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.11",
    "greenlet>=3.1.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.38",
]
